--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "shua",
-  "version": "1.1.2",
+  "version": "1.1.4",
   "description": "A lovely downloader",
-  "main": "index.js",
+  "main": "dist/exports.js",
+  "types": "dist/exports.d.ts",
   "scripts": {
     "build": "tsc --newLine lf"
   },
