--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "shua",
-    "version": "2.0.6",
+    "version": "2.0.7",
     "description": "A lovely downloader",
     "main": "dist/exports.js",
     "types": "dist/exports.d.ts",
@@ -21,9 +21,8 @@
     },
     "homepage": "https://github.com/Last-Order/shua#readme",
     "dependencies": {
-        "axios": "^0.21.1",
-        "erii": "^2.0.0",
-        "socks-proxy-agent": "^4.0.2"
+        "axios": "^0.21.4",
+        "erii": "^2.0.3"
     },
     "devDependencies": {
         "@types/node": "^12.12.14",
